--- a/public/styles.css
+++ b/public/styles.css
@@ -44,6 +44,7 @@ main > div {
 
 main .drawing-container {
     flex: 70%;
+    padding: 1rem;
 }
 
 main .chat-container {
@@ -86,5 +87,16 @@ main .chat-container .chat-input input[type="submit"] {
     padding: 0 1rem;
     border: none;
     border-radius: .5em;
+}
+
+.drawing-container {
+    max-height: calc(568px - 56px);
+}
+
+.whiteboard {
+    height: calc(568px - 56px);
+    width: 100%;
+    background-color: white;
+    border-radius: .5rem;
 }
 
