--- a/public/styles.css
+++ b/public/styles.css
@@ -1,102 +1,76 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
-
-:root {
-    --primary-color: #3788f0;
-    --secondary-color: #ffffff;
-    --background-color: #2d2b36;
-    --text-color: #ffffff;
-}
-
+  
 html, body {
     height: 100%;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
 }
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("./assets/images/background.jpg");
-    background-size: cover;
-    font-family: 'Open Sans', sans-serif;
-}
-
-main {
-    max-width: 1200px;
-    width: 100%;
-    display: flex;
-    gap: 2rem;
-}
-
-main > div {
-    display: inline-block;
-    background-color: var(--background-color);
-    padding: 1rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-    min-height: 600px;
-    height: 100%;
-}
-
-main .drawing-container {
-    flex: 70%;
-    padding: 1rem;
-}
-
-main .chat-container {
-    flex: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-main .chat-container .chat {
-    height: calc(568px - 56px);
-    overflow-y: auto;
-    display: inline-block;
-    background: rgba(0 0 0 / 25%);
-    list-style: none;
-    padding: .5rem;
-    border-radius: .5rem;
-    color: var(--text-color);
-}
-
-main .chat-container .chat-input {
-    display: flex;
-    gap: 1rem;
-}
-
-main .chat-container .chat-input input[type="text"] {
-    width: 100%;
-    background: var(--secondary-color);
-    color: black;
-    height: 40px;
-    border: none;
-    border-radius: .5em;
-    padding: 0 .5em;
-}
-
-main .chat-container .chat-input input[type="submit"] {
-    background: var(--primary-color);
-    color: var(--background-color);
-    padding: 0 1rem;
-    border: none;
-    border-radius: .5em;
-}
-
-.drawing-container {
-    max-height: calc(568px - 56px);
-}
-
+  
 .whiteboard {
-    height: calc(568px - 56px);
+    height: 100%;
     width: 100%;
-    background-color: white;
-    border-radius: .5rem;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
 }
 
+.chat-container {
+    display: block;
+    width: 500px;
+    padding: 1rem;
+    background-color: #eaeaea;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: .5s;
+}
+
+.chat-button {
+    display: block;
+    position: absolute;
+    height: 75px;
+    width: 75px;
+    top: 20px;
+    left: -100px;
+    padding: 1rem;
+    background-color: #eaeaea;
+    cursor: pointer;
+    border-radius: 100%;
+    border: none;
+    background-image: url(./assets/images/chat-icon.png);
+    background-size: 32px;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    opacity: .5;
+    transition: .5s;
+}
+
+.chat-button:hover {
+    opacity: 1;
+}
+
+.toggle {
+    transform: translateX(0);
+}
+
+.chat-footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 75px;
+    background-color: blue;
+}
+
+.chat-messages {
+    height: 750px;
+    overflow: auto;
+}
